RESOLVED FIXED279361
[MediaStream] Elapsed minutes and hours never go beyond 0 in the mock video source generated frames
https://bugs.webkit.org/show_bug.cgi?id=279361
Summary [MediaStream] Elapsed minutes and hours never go beyond 0 in the mock video s...
Philippe Normand
Reported 2024-09-09 07:24:57 PDT
oops
Attachments
Philippe Normand
Comment 1 2024-09-09 07:27:09 PDT
EWS
Comment 2 2024-09-10 01:36:08 PDT
Committed 283406@main (7745b3158a7d): <https://commits.webkit.org/283406@main> Reviewed commits have been landed. Closing PR #33322 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-10 01:37:16 PDT
Note You need to log in before you can comment on or make changes to this bug.