[MediaStream] Elapsed minutes and hours never go beyond 0 in the mock video source generated frames https://bugs.webkit.org/show_bug.cgi?id=279361

Reviewed by Youenn Fablet.

The seconds value spans between 0 and 60, so infering minutes and hours from that would always lead
to 0.

* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::drawText):

Canonical link: https://commits.webkit.org/283406@main